- Major bugfix: crash dell'applicazione quando si aprono le impostazione con il primo mese dell'anno non impostato correttamente
- Possibilità di visualizzare il saldo parziale per ogni transazione. La visualizzazione si attiva dalle impostazioni Display.

<b> Version 1.1.4 </b>
- Aggiornamento traduzione: Russo
- <i>Risoluzione bug minori</i>

<b> Version 1.1.3 </b>
- <i>Risoluzione bug minori</i>

<b> Version 1.1.2 </b>
- Aggiunto nel Report Entrate / Uscite la possibilià di ordinare in modo crescente o decrescente i mesi.
- Quando si effettua una ricerca, e si modifica una delle transazioni selezionate, quando si ritorna l'applicazione riesegua la ricerca in automatico
- <i>Risoluzione bug minori</i>

<b> Version 1.1.0 </b>
- Aggiunta la possibilità di splittare le transazioni
- Esportazione transazioni su file CSV
- I widget possono essere posizionati nel lockscreen  (Android 4.2)
- <i>Risoluzione bug minori</i>

<b> Version 1.0.6 </b>
- <i>Bugfix:</i> Il totale riconciliato nei conti correnti non considerava le operazioni duplicate
- <i>Bugfix:</i> Reports per categorie e beneficiario visualizzava dati sbagliata nel mese scorso

<b> Version 1.0.3 </b>
- Aggiornamento traduzione: Russo
- <i>Bugfix:</i> la ricerca per filtrare i benefeciari, categorie, etc... non visualizzava la tastiera

<b> Version 1.0.2 </b>
- <i>Bugfix:</i> nella visualizzazione dell'importo e del nome conto nelle transazioni di trasferimento
- <i>Bugfix:</i> nelle impostazioni mese anno finanziario

<b> Version 1.0.0 </b>
- Aggiunta la funzionalità di <b>ricerca delle transazioni</b>
- Aggiunto <b>report Ingressi / Uscite</b> con la possibilità di filtrare per anno
- Aggiunto <b>report Categorie</b> con la possibilità di filtrare per catgoria
- Aggiunto <b>report Beneficiario</b>
- Possibilità di spostare il database dalla memoria interna dell'applicazione alla scheda di memoria
- Aggiunte nelle impostazioni: formato data, calendario finanziario (giorno e mese di inizio)