@@ -19,8 +19,8 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.money.manager.ex"
-    android:versionCode="249"
-    android:versionName="1.2.0" >
+    android:versionCode="252"
+    android:versionName="1.2.1" >
 
     <uses-sdk
         android:minSdkVersion="8"
